# GamesProgrammingExercises

./: CMakeLists.txt
Ex10_Platformer/: BirdMovementComponent.cpp  Bubble.cpp  Bubble.hpp  CharacterController.cpp  CharacterController.hpp  Level.cpp  MovingPlatformComponent.cpp  MovingPlatformComponent.hpp  PlatformerGame.cpp  PlatformerGame.hpp  ScriptComponent.cpp
Ex2_Cpp_Foundation/: CMakeLists.txt
Ex2_Cpp_Foundation/Exercise2-1-HelloPreprocessor/: main.cpp
Ex2_Cpp_Foundation/Exercise2-2-SquaredSecrets/: main.cpp
Ex2_Cpp_Foundation/Exercise2-3-MineSweeper/: main_gui.cpp
Ex4_Sprites/: Asteroid.cpp  Asteroid.hpp  AsteroidsGame.cpp  AsteroidsGame.hpp  GameObject.cpp  GameObject.hpp  Laser.cpp  Laser.hpp  SpaceShip.cpp  SpaceShip.hpp  asteroids.json
Ex6-Assignment2_Wolf/: FirstPersonController.cpp  FirstPersonController.hpp  Wolf3D.cpp
Ex6_Wolf/: CMakeLists.txt  FirstPersonController.cpp  FirstPersonController.hpp  Wolf3D.cpp
Ex8_Bird/: BirdController.cpp  BirdController.hpp  BirdGame.cpp  BirdGame.hpp
Exercise_1-6/: CMakeLists.txt
